# GTXiLib

./: .bazelrc  .gitignore  BUILD.bazel  GTX_PASSING_CHECKS.md  GTX_RESULT_FORMATTING.md  GTX_USAGE_EXAMPLES.md  GTXiLib.modulemap  GTXiLib.podspec  MODULE.bazel  USAGE_EXAMPLES.md
Classes/: GTXToolKit.mm  GTXiLib.h  GTXiLibCore.m
Classes/ObjCPP/: GTXLocalizedStringsManagerUtils.mm
Classes/XCTest/: GTXAccessibilityChecks.swift  GTXAggregator.swift
OOPClasses/: accessibility_label_not_punctuated_check.cc  accessibility_label_not_punctuated_check.h  check.cc  check.h  check_lookup.cc  check_lookup.h  check_result_resource_similarity.cc  contrast_check.cc  contrast_check.h  contrast_swatch.cc  locales.h  localized_string_ids.h  localized_strings_manager.cc  localized_strings_manager.h  minimum_tappable_area_check.cc  minimum_tappable_area_check.h  nearest_ancestor_relation_resource_id_generator.cc  no_label_check.cc  no_label_check.h  toolkit.cc  xml_utils.cc
OOPClasses/Protos/: accessibility_hierarchy_searching.cc  accessibility_hierarchy_searching.h  check_result_clustering.cc  check_result_clustering.h  metadata_map.cc  metadata_map.h
Tests/Common/OOPTestLib/CPP/: gtxtest_always_failing_check.cc  gtxtest_always_failing_check.h  gtxtest_always_passing_check.cc  gtxtest_always_passing_check.h
Tests/GTXOOPTests/UnitTests/: GTXAccessibilityHierarchySearchingTests.mm  GTXAccessibilityLabelNotPunctuatedCheckTests.mm  GTXCheckLookupTests.mm  GTXCheckResultClusteringTests.mm  GTXCheckResultResourceSimilarityTests.mm  GTXCheckTests.mm  GTXContrastCheckTests.mm  GTXMetadataMapTests.mm  GTXMinimumTappableAreaCheckTests.mm  GTXNearestAncestorRelationResourceIdGeneratorTest.mm  GTXNoLabelCheckTests.mm  GTXProtoUtilsTests.mm
Tests/GTXTests/UnitTests/: GTXToolkitSwiftTests.swift
