module(
    name = "gtxilib",
    version = "7.1.1",
    repo_name = "gtxilib",
)

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_apple", version = "4.2.0", repo_name = "rules_apple")
bazel_dep(name = "apple_support", version = "1.23.1")
bazel_dep(name = "rules_swift", version = "3.1.2", repo_name = "rules_swift")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "abseil-cpp", version = "20240722.0", repo_name = "absl")
bazel_dep(name = "tinyxml2", version = "10.0.0", repo_name = "tinyxml2")
